--- a/example/src/styles.scss
+++ b/example/src/styles.scss
@@ -1,1 +1,84 @@
 /* You can add global styles to this file, and also import other style files */
+@use './assets/materialicons/icon.css';
+@use 'slate-angular/styles/index.scss';
+
+.slate-editable-container {
+    .code-line {
+        background-color: rgba($color: #000000, $alpha: 0.06);
+        border-radius: 2px;
+        border: 1px solid rgba($color: #000000, $alpha: 0.08);
+        padding: 0 2px;
+        margin: 0 1px;
+    }
+
+    blockquote {
+        margin: 0;
+        margin-left: 0;
+        margin-right: 0;
+        color: #888;
+        padding-left: 10px !important;
+        border-left: 4px solid #eee;
+    }
+
+    h1,
+    h2,
+    h3 {
+        margin: 0px;
+    }
+
+    &>[data-slate-node="element"],
+    &>slate-block-card {
+        margin-bottom: 12px;
+    }
+}
+
+.demo-rich-editor-wrapper {
+    max-width: 42em;
+    margin: 20px auto;
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.05);
+
+    .slate-editable-container {
+        padding: 0px;
+    }
+
+    .demo-global-toolbar {
+        padding: 1px 18px 17px;
+        display: flex;
+        justify-content: left;
+        position: sticky;
+        top: 0;
+        z-index: 999;
+
+        &>* {
+            display: inline-block;
+            height: 24px;
+            line-height: 24px;
+        }
+
+        &>*+* {
+            margin-left: 15px;
+        }
+
+        border-bottom: 2px solid #f5f5f5;
+        margin: 0 -20px;
+        margin-bottom: 20px;
+    }
+
+    .demo-element-image {
+        display: block;
+
+        img {
+            display: block;
+            max-width: 100%;
+            max-height: 20em;
+            box-shadow: none;
+            box-sizing: border-box;
+        }
+
+        .outline {
+            box-shadow: 0 0 0 2px #348fe4;
+        }
+    }
+}
