--- a/example/src/styles.scss
+++ b/example/src/styles.scss
@@ -4,6 +4,10 @@
 @use './app/components/caret/caret.component.scss';
 
 .slate-editable-container {
+    background-color: white;
+    min-height: 100px;
+    padding: 15px;
+    border-radius: 2px;
     .code-line {
         background-color: rgba($color: #000000, $alpha: 0.06);
         border-radius: 2px;
@@ -33,22 +37,29 @@
     }
 }
 
-.demo-rich-editor-wrapper {
-    max-width: 42em;
-    margin: 20px auto;
-    padding: 20px;
-    background-color: #fff;
-    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.05);
-
-    .slate-editable-container {
-        padding: 0px;
+.demo-room {
+    width: 560px;
+    margin: 0 auto;
+    .clients {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        .client {
+            width: 100%;
+        }
     }
+}
+
+.demo-client {
+    padding: 20px;
+    min-height: 200px;
+    background-color: rgba($color: #000000, $alpha: 0.05);
+    margin-bottom: 20px;
 
     .demo-global-toolbar {
         padding: 1px 18px 17px;
         display: flex;
         justify-content: left;
-        position: sticky;
         top: 0;
         z-index: 999;
 
@@ -62,9 +73,7 @@
             margin-left: 15px;
         }
 
-        border-bottom: 2px solid #f5f5f5;
         margin: 0 -20px;
-        margin-bottom: 20px;
     }
 
     .demo-element-image {
@@ -82,4 +91,17 @@
             box-shadow: 0 0 0 2px #348fe4;
         }
     }
+}
+
+.ottype-button {
+    padding: 6px 14px;
+    display: block;
+    outline: none;
+    background-color: transparent;
+    font-size: 14px;
+    text-align: center;
+    color: palevioletred;
+    white-space: nowrap;
+    border: 2px solid palevioletred;
+    cursor: pointer;
 }
